--- a/.gitignore
+++ b/.gitignore
@@ -132,5 +132,5 @@ dmypy.json
 .idea
 
 # Image folder
-/website/core/media/image/*
-!/website/core/media/image/.gitkeep
+/website/media/images/*
+!/website/media/images/.gitkeep
